--- a/front-end/index.html
+++ b/front-end/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
 
     <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-wKVdqHwpA8n0xCvivKtBqAJSgB6elqfZgjzk0W1Vow9R6G6ZScvXIA5cydlyNSPY6PkeJd3XrNzRY/ID9mS2qQ==" crossorigin="anonymous" />
+
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Vue</title>
