Headers+ Login + Register CSS style

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-wKVdqHwpA8n0xCvivKtBqAJSgB6elqfZgjzk0W1Vow9R6G6ZScvXIA5cydlyNSPY6PkeJd3XrNzRY/ID9mS2qQ==" crossorigin="anonymous" />
 
 
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BoolBnB</title>
   </head>
